force-app/main/default/objects/Site_Covered__c/Site_Covered__c.object-meta.xml
<CustomObject>
    <description>List of Customer Sites covered for the Opportunity and related Project</description>
    <label>Site Covered</label>
    <nameField>
        <displayFormat>SC-{0000000}</displayFormat>
        <label>Site Covered Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sites Covered</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>