force-app/main/default/objects/Site_Covered__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sites Covered (Customer)</relationshipLabel>
    <relationshipName>Sites_Covered_Customer</relationshipName>
    <type>Lookup</type>
</CustomField>