force-app/main/default/objects/Site_Covered__c/fields/CustomerSite__c.field-meta.xml
<CustomField>
    <fullName>CustomerSite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Site</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Customer Site</value>
        </filterItems>
        <filterItems>
            <field>$Source.Customer__c</field>
            <operation>equals</operation>
            <valueField>Account.ParentId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sites Covered</relationshipLabel>
    <relationshipName>Sites_Covered</relationshipName>
    <type>Lookup</type>
</CustomField>