force-app/main/default/objects/Site_Covered__c/fields/DMS_Migrated__c.field-meta.xml
<CustomField>
    <fullName>DMS_Migrated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DMS Migrated</label>
    <type>Checkbox</type>
</CustomField>