force-app/main/default/objects/Site_Covered__c/fields/External_Account_Site_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Account_Site_Id__c</fullName>
    <description>This field is a part of snm and use in sf to sf sync.</description>
    <formula>CustomerSite__r.External_Record_Id__c</formula>
    <label>External Account Site Id</label>
    <type>Text</type>
</CustomField>