force-app/main/default/objects/Site_Covered__c/fields/External_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Opportunity_Id__c</fullName>
    <description>This field is a part of snm and use in sf to sf sync.</description>
    <formula>Opportunity__r.External_Record_Id__c</formula>
    <label>External Opportunity Id</label>
    <type>Text</type>
</CustomField>