force-app/main/default/objects/Site_Covered__c/fields/External_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Owner_Id__c</fullName>
    <description>This field is a part of snm and use in sf to sf sync.</description>
    <formula>Owner:User.External_Record_Id__c</formula>
    <label>External Owner Id</label>
    <type>Text</type>
</CustomField>