force-app/main/default/objects/Site_Covered__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sites Covered</relationshipLabel>
    <relationshipName>Sites_Covered</relationshipName>
    <type>Lookup</type>
</CustomField>