force-app/main/default/objects/Site_Covered__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <formula>CustomerSite__r.ShippingStreet +&quot;, &quot;+
CustomerSite__r.ShippingCity + &quot;, &quot;+
CustomerSite__r.ShippingState +&quot; &quot; +
CustomerSite__r.ShippingPostalCode + &quot;, &quot;+
CustomerSite__r.ShippingCountry</formula>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>