force-app/main/default/objects/Site_Covered__c/fields/Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Name__c</fullName>
    <formula>CustomerSite__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Name</label>
    <type>Text</type>
</CustomField>